# proto

./: requirment.md  tooth2.glb
code/: .gitignore  pyproject.toml
code/neuro_core/config/: config.py  full_lang_names.json  public_key.pem
code/neuro_core/config/langs/: ar.json  bn.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  pa.json  pt.json  ru.json  tr.json  uk.json  vi.json  zh.json
code/neuro_core/config/professions/: professions.csv
code/neuro_core/config/styles/forgot_password_phrase_window/: balanced.json  dark.json  light.json
code/neuro_core/config/styles/forgot_password_qr_loading_window/: balanced.json  dark.json  light.json
code/neuro_core/config/styles/forgot_password_qr_scan_window/: balanced.json  dark.json  light.json
code/neuro_core/config/styles/forgot_password_qr_window/: balanced.json  dark.json  light.json
code/neuro_core/config/styles/forgot_password_success_window/: balanced.json  dark.json  light.json
code/neuro_core/neuro_ai/action_detection/: main.py
code/neuro_core/neuro_ai/ocr/: main.py
code/neuro_core/tools/: utils.py
code/neuro_core/ui/: reception_module.py
code/neuro_core/ui/windows/: forgot_password_phrase_window.py  forgot_password_qr_loading_window.py  forgot_password_qr_scan_window.py  forgot_password_qr_window.py  forgot_password_success_window.py  forgot_password_window.py  login_window.py  password_recovery_window.py  privacy_policy_window.py  sign_up_recovery_code_window.py  sign_up_recovery_qr_window.py  sign_up_success_window.py  sign_up_window.py
code/neuro_core/utils/: lang_loader.py
(+74 files in other folders)
